<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/logoo"
        android:src="@drawable/chatterbox"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:drawableLeft="@drawable/baseline_name_24"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etMail"
        android:hint="@string/email"
        android:drawableLeft="@drawable/baseline_email_24"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etPasswordR"
        android:hint="@string/password"
        android:drawableLeft="@drawable/baseline_abc_24"
        android:inputType="textPassword"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etConfirmPasswd"
        android:hint="@string/confirm_password"
        android:drawableLeft="@drawable/baseline_abc_24"
        android:inputType="textPassword"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/bRegister"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_login"
        android:id="@+id/tvLogin"
        android:layout_gravity="center"
        android:textSize="20dp"/>


</LinearLayout>