<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical">


    <TextView
        android:id="@+id/nquiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/quiz_5"
        android:textSize="40dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/q5" />

    <TextView
        android:id="@+id/q5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/q5"
        android:textSize="20dp" />

    <RadioGroup
        android:id="@+id/choices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/choice1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oui" />

        <RadioButton
            android:id="@+id/choice2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/non" />
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/next"
        android:id="@+id/bnext"/>

    <ImageView
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/logoo" />

</LinearLayout>
