<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical"
    >

    <ImageView
        android:id="@+id/logo"
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/chatterbox"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etLogin"
        android:hint="@string/email"
        android:drawableLeft="@drawable/baseline_email_24"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etPassword"
        android:hint="@string/password"
        android:drawableLeft="@drawable/baseline_abc_24"
        android:inputType="textPassword" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:id="@+id/bLogin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_register"
        android:id="@+id/tvRegister"
        android:layout_gravity="center"
        android:textSize="20dp"/>


</LinearLayout>