<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical">


    <TextView
        android:id="@+id/nquiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/quiz_2"
        android:textSize="40dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/image2"
        android:src="@drawable/q2"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        />

    <TextView
        android:id="@+id/q2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/q2"
        android:textSize="20dp" />

    <RadioGroup
        android:id="@+id/choices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/choice1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/droite" />

        <RadioButton
            android:id="@+id/choice2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gauche" />
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="1dp"
        android:text="@string/next"
        android:id="@+id/bnext"/>

    <ImageView
        android:id="@+id/image22"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/logoo"
        android:layout_marginTop="40dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true" />



</LinearLayout>