<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Score"
    android:orientation="vertical"
    android:layout_margin="25dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/logoo2"
        android:src="@drawable/logoo"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_gravity="center"
        android:text="@string/votre_score"
        android:textColor="@color/green"
        android:textSize="25dp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/etprogress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="115dp"
            app:indicatorSize="130dp"
            app:trackCornerRadius="30dp"
            app:trackThickness="10dp"
            tools:progress="60" />

        <TextView
            android:id="@+id/etscore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:text="50%" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/logout"
            android:id="@+id/bLogout"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/try_again"
            android:id="@+id/bTry"/>
    </LinearLayout>

</LinearLayout>
